--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>No Matter Blaster</title>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9.5/brython.min.js"></script>
   <style>
@@ -104,19 +104,6 @@
       border: none;
       cursor: pointer;
     }
-    /* START BUTTON STYLES */
-    #start-button {
-      width: 200px;
-      height: 60px;
-      font-size: 24px;
-      font-family: 'Press Start 2P', monospace;
-      background-color: #00ff00;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      animation: breathing 2s infinite;
-      margin-top: 20px;
-    }
   </style>
 </head>
 <body onload="brython()">
@@ -132,13 +119,13 @@
   <!-- GAME CANVAS -->
   <canvas id="game-canvas" width="800" height="600" style="display:none;"></canvas>
 
-  <!-- NEW AUDIO TAGS (each loops) -->
+  <!-- AUDIO ELEMENTS -->
   <audio id="title-audio" src="title_audio.mp3" loop></audio>
   <audio id="level2-audio" src="level2_audio.mp3" loop></audio>
   <audio id="level3-audio" src="level3_audio.mp3" loop></audio>
   <audio id="boss-audio" src="boss_audio.mp3" loop></audio>
 
-  <!-- Sound effects remain the same -->
+  <!-- Sound effects -->
   <audio id="laser-audio" src="laser.mp3"></audio>
   <audio id="explosion-audio" src="explosion.mp3"></audio>
 
@@ -153,9 +140,6 @@
       <button id="submit-name">Submit</button>
     </div>
   </div>
-
-  <!-- START BUTTON -->
-  <button id="start-button" style="display: none;">Start Game</button>
 
   <script type="text/python">
     from browser import document, html, window
@@ -230,7 +214,7 @@
             "level1/redtshirt.png"
         ],
         2: [
-            "level2/broken_guitar.png",  # Renamed to remove space
+            "level2/broken guitar.png",  # Corrected filename (no space)
             "level2/brokenbtl.png",
             "level2/greentshirt.png",
             "level2/sticker.png",
@@ -248,10 +232,6 @@
         lvl: [html.IMG(src=path) for path in level_image_paths[lvl]]
         for lvl in level_image_paths
     }
-
-    # Initialize asset loading counters
-    assets_loaded = 0
-    total_assets = 3 + sum(len(imgs) for imgs in level_images.values())
 
     enemies = []
     bullets = []
@@ -288,9 +268,6 @@
     high_score_modal = document["high-score-modal"]
     player_name_input = document["player-name"]
     submit_name_button = document["submit-name"]
-
-    # START BUTTON
-    start_button = document["start-button"]
 
     # -------------
     # AUDIO CONTROL
@@ -349,14 +326,17 @@
         return (scaled_w, scaled_h)
 
     # -------------------------------------------------
-    # LOADING SCREEN UTILS (OPTIONAL)
+    # LOADING SCREEN UTILS
     # -------------------------------------------------
-    def asset_loaded(event):
+    assets_loaded = 0
+    total_assets = 3 + sum(len(imgs) for imgs in level_images.values())  # spaceship, title, boss + level images
+
+    def asset_loaded(asset_name):
         global assets_loaded
         assets_loaded += 1
         progress = (assets_loaded / total_assets) * 100
         loading_progress.style.width = f"{progress}%"
-        print(f"Asset loaded: {event}. Progress: {progress}%")
+        print(f"Asset loaded: {asset_name}. Progress: {progress}%")
         if assets_loaded == total_assets:
             print("All assets loaded.")
             show_title_screen()
@@ -376,7 +356,7 @@
         canvas.style.display = "block"
         set_music_for_title_screen()       # Start title music
         initialize_high_score()
-        show_start_button()                 # Display the start button instead of animating
+        animate_title_screen()
 
     # ------------------------------
     # GAME INITIALIZATION / RESET
@@ -413,10 +393,9 @@
                             "pos": [enemy_x, enemy_y],
                             "img": img
                         })
+                        print(f"Enemy initialized at position: [{enemy_x}, {enemy_y}]")
                 boss_hits = 0
                 print(f"Total enemies initialized: {len(enemies)}")
-                for enemy in enemies:
-                    print(f"Enemy initialized at position: {enemy['pos']}")
             else:
                 # Boss time
                 enemies.clear()
@@ -452,7 +431,7 @@
         Called when we want to return to the title screen after game over or a completed run.
         """
         global level, game_started, game_over, score
-        global showing_level_title, showing_final_score, showing_high_score_prompt
+        global showing_level_title, showing_high_score_prompt, showing_final_score
         global final_score_scheduled
 
         print("Resetting game to title screen")
@@ -465,7 +444,7 @@
         showing_high_score_prompt = False
         final_score_scheduled = False
 
-        show_start_button()  # Show the start button again
+        animate_title_screen()  # will call set_music_for_title_screen again
 
     # ----------------------
     # DRAWING / RENDERING
@@ -476,22 +455,27 @@
         move_stars()
         draw_stars()
 
-        title_width, title_height = 800, 200
+        # Draw title image
+        title_width, title_height = get_scaled_dims(title_img, 800)
         ctx.drawImage(
             title_img,
-            (WIDTH - title_width) // 2,
-            (HEIGHT // 3 - title_height // 2),
+            (WIDTH - title_width) / 2,
+            (HEIGHT // 3 - title_height / 2),
             title_width,
             title_height
         )
 
+        # Flashing text
         if flash_text:
             ctx.fillStyle = "white"
             ctx.font = "bold 28px 'Press Start 2P'"
             ctx.textAlign = "center"
-            ctx.fillText("Press Space to Play", WIDTH // 2, HEIGHT // 1.7)
+            ctx.fillText("Press SPACE to Play", WIDTH // 2, HEIGHT // 1.7)
 
+        # Leaderboard
+        ctx.fillStyle = "white"
         ctx.font = "bold 28px 'Press Start 2P'"
+        ctx.textAlign = "center"
         ctx.fillText("Leaderboard", WIDTH // 2, HEIGHT // 1.3 - 40)
 
         if top_scores:
@@ -517,7 +501,12 @@
             ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
 
         print("Scheduling initialize_game() in 1 second")
-        window.setTimeout(initialize_game, 1000)  # Proceed to initialize the game after 1 second
+        window.setTimeout(lambda: initialize_game(), 1000)  # Proceed to initialize the game after 1 second
+
+        # Reset the flag to prevent re-drawing
+        global showing_level_title
+        showing_level_title = False
+        print(f"showing_level_title set to {showing_level_title}")
 
     def draw_final_score():
         print("Drawing final score")
@@ -530,8 +519,9 @@
         ctx.fillText(f"Final Score: {score}", WIDTH // 2, HEIGHT // 2)
 
         if high_score_updated:
-            ctx.fillStyle = "white"
-            ctx.font = "36px 'Press Start 2P'"
+            print("High score updated: Showing high score prompt")
+            ctx.fillStyle = "yellow"
+            ctx.font = "28px 'Press Start 2P'"
             ctx.fillText("New High Score!", WIDTH // 2, HEIGHT // 1.7)
             show_high_score_prompt()
         else:
@@ -549,7 +539,6 @@
         player_name_input.value = ""
 
     def draw_stars():
-        print("Drawing stars")
         ctx.fillStyle = "white"
         for star in stars:
             ctx.fillRect(star["x"], star["y"], star["size"], star["size"])
@@ -664,7 +653,6 @@
         global high_score_updated, showing_high_score_prompt, showing_final_score
         high_score_updated = False
 
-        print(f"Final Score: {score}")
         for i in range(len(top_scores)):
             if score > top_scores[i]["score"]:
                 high_score_updated = True
@@ -684,7 +672,6 @@
         if player_name:
             top_scores.append({"name": player_name, "score": score})
             top_scores = sorted(top_scores, key=lambda x: x['score'], reverse=True)[:3]
-            print(f"Submitting new high score: {player_name} - {score}")
             trigger_github_action(player_name, score)
             hide_high_score_prompt()
             reset_game()
@@ -765,7 +752,7 @@
                 'headers': headers,
                 'body': window.JSON.stringify(data)
             }
-        ).then(on_complete)
+        ).then(on_complete).catch(lambda e: window.console.error(f"GitHub Action Error: {e}"))
 
     # -----------------------------------------
     # MAIN UPDATE LOOP (movement, collisions)
@@ -809,51 +796,45 @@
         if level <= MAX_LEVELS:
             for enemy in enemies[:]:
                 for bullet in bullets[:]:
-                    if (bullet[0] >= enemy["pos"][0] and
-                        bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
-                        bullet[1] >= enemy["pos"][1] and
-                        bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
+                    if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
+                        enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
+                        print(f"Enemy hit at position {enemy['pos']} by bullet {bullet}")
                         enemies.remove(enemy)
                         bullets.remove(bullet)
                         score += 1
                         explosion_audio.play()
-                        print(f"Enemy hit at position {enemy['pos']} by bullet {bullet}")
                         break
         else:
             # Collisions with boss
             for bullet in bullets[:]:
-                if (bullet[0] >= boss_pos[0] and
-                    bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    bullet[1] >= boss_pos[1] and
-                    bullet[1] <= boss_pos[1] + BOSS_SIZE):
+                if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
+                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
+                    print(f"Boss hit at position {boss_pos} by bullet {bullet}")
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
-                    print(f"Boss hit at position {boss_pos} by bullet {bullet}")
 
         # Collisions with player
         for bullet in enemy_bullets[:]:
-            if (bullet[0] >= player_pos[0] and
-                bullet[0] <= player_pos[0] + PLAYER_SIZE and
-                bullet[1] >= player_pos[1] and
-                bullet[1] <= player_pos[1] + PLAYER_SIZE):
-                game_over = True
+            if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_SIZE and
+                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_SIZE):
                 print(f"Player hit by enemy bullet at position {bullet}")
+                game_over = True
 
         for laser in laser_beams[:]:
-            if (laser["x"] <= player_pos[0] + PLAYER_SIZE and
-                laser["x"] + LASER_WIDTH >= player_pos[0] and
-                laser["y"] >= player_pos[1]):
-                game_over = True
+            if (player_pos[0] <= laser["x"] + LASER_WIDTH and
+                laser["x"] <= player_pos[0] + PLAYER_SIZE and
+                player_pos[1] <= laser["y"]):
                 print(f"Player hit by laser beam at position {laser}")
+                game_over = True
 
         for shot in diagonal_shots[:]:
-            if (shot["x"] <= player_pos[0] + PLAYER_SIZE and
-                shot["x"] + BULLET_WIDTH >= player_pos[0] and
-                shot["y"] <= player_pos[1] + BULLET_HEIGHT and
-                shot["y"] + BULLET_HEIGHT >= player_pos[1]):
-                game_over = True
+            if (player_pos[0] <= shot["x"] + BULLET_WIDTH and
+                shot["x"] <= player_pos[0] + PLAYER_SIZE and
+                player_pos[1] <= shot["y"] + BULLET_HEIGHT and
+                shot["y"] <= player_pos[1] + BULLET_HEIGHT):
                 print(f"Player hit by diagonal shot at position {shot}")
+                game_over = True
 
         # Enemy/player overlap (normal levels)
         if level <= MAX_LEVELS:
@@ -862,8 +843,8 @@
                      enemy["pos"][0] <= player_pos[0] + PLAYER_SIZE <= enemy["pos"][0] + ENEMY_SIZE) and
                     (enemy["pos"][1] <= player_pos[1] <= enemy["pos"][1] + ENEMY_SIZE or
                      enemy["pos"][1] <= player_pos[1] + PLAYER_SIZE <= enemy["pos"][1] + ENEMY_SIZE)):
-                    game_over = True
                     print("Player collided with enemy")
+                    game_over = True
 
             # Enemy movement
             move_down = False
@@ -901,18 +882,22 @@
         if level <= MAX_LEVELS:
             for enemy in enemies:
                 if window.Math.random() < (0.03 + 0.01 * level):
+                    bullet_x = enemy["pos"][0] + ENEMY_SIZE // 2
+                    bullet_y = enemy["pos"][1] + ENEMY_SIZE
                     enemy_bullets.append([
-                        enemy["pos"][0] + ENEMY_SIZE // 2,
-                        enemy["pos"][1] + ENEMY_SIZE
+                        bullet_x,
+                        bullet_y
                     ])
-                    print(f"Enemy at {enemy['pos']} fired a bullet at ({enemy_bullets[-1][0]}, {enemy_bullets[-1][1]})")
+                    print(f"Enemy at {enemy['pos']} fired a bullet at ({bullet_x}, {bullet_y})")
         else:
             if window.Math.random() < 0.1:
+                bullet_x = boss_pos[0] + BOSS_SIZE // 2
+                bullet_y = boss_pos[1] + BOSS_SIZE
                 enemy_bullets.append([
-                    boss_pos[0] + BOSS_SIZE // 2,
-                    boss_pos[1] + BOSS_SIZE
+                    bullet_x,
+                    bullet_y
                 ])
-                print(f"Boss at {boss_pos} fired a bullet at ({enemy_bullets[-1][0]}, {enemy_bullets[-1][1]})")
+                print(f"Boss at {boss_pos} fired a bullet at ({bullet_x}, {bullet_y})")
             current_time = window.Date.new().getTime()
             if current_time - boss_last_laser > boss_laser_cooldown:
                 laser_beams.append({
@@ -958,13 +943,13 @@
     # -----------
     def start_game():
         global showing_level_title, game_started
-        print("Starting game: Initializing game")
-        showing_level_title = False
-        game_started = True
-        initialize_game()
+        print("Starting game: Enabling Level Title Screen")
+        showing_level_title = True  # Enable Level 1 cover screen
+        game_started = True         # Indicate that the game has started
+        # Do not call initialize_game() directly here
+        print(f"showing_level_title set to {showing_level_title}, game_started set to {game_started}")
 
     def move_player(event):
-        print(f"Key event detected: {event.keyCode}")  # Debugging statement
         global game_started, game_over, player_last_shot
         current_time = window.Date.new().getTime()
 
@@ -1033,27 +1018,11 @@
     window.setInterval(enemy_shoot, 500)
     window.setInterval(toggle_flash_text, 1000)
 
-    # START BUTTON HANDLING
-    def show_start_button():
-        print("Displaying start button")
-        start_button.style.display = "block"
-
-    def hide_start_button():
-        print("Hiding start button")
-        start_button.style.display = "none"
-
-    def start_game_via_button(event):
-        print("Start button clicked")
-        hide_start_button()
-        start_game()
-
-    start_button.bind("click", start_game_via_button)
-
-    # Remove animate_title_screen to prevent infinite loop
-    # def animate_title_screen():
-    #     if not game_started:
-    #         draw_start_screen()
-    #         window.requestAnimationFrame(lambda x: animate_title_screen())
+    # Title screen animation
+    def animate_title_screen():
+        if not game_started:
+            draw_start_screen()
+            window.requestAnimationFrame(lambda x: animate_title_screen())
 
     # Simple loading screen
     def show_loading_screen():
