--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
 
   <script type="text/python">
-    from browser import document, html, window
+    from browser import document, html, window, timer
 
     # ---------------------------------------------------------
     # GAME CONSTANTS (collision boxes, speeds, bullet sizes, etc.)
@@ -158,7 +158,7 @@
     ENEMY_BULLET_WIDTH, ENEMY_BULLET_HEIGHT = 5, 15
     ENEMY_BULLET_SPEED = 2.5
     LASER_WIDTH = 10
-    LASER_DURATION = 600
+    LASER_DURATION = 600  # in ms
     MAX_LEVELS = 3
     BOSS_HITS_REQUIRED = 20
 
@@ -182,11 +182,11 @@
     ENEMY_SPEED = 1.5
     flash_text = True
     player_last_shot = 0
-    player_shot_cooldown = 500
+    player_shot_cooldown = 500  # in ms
     boss_last_laser = 0
-    boss_laser_cooldown = 4000
+    boss_laser_cooldown = 4000  # in ms
     boss_last_diagonal_shot = 0
-    boss_diagonal_cooldown = 1500
+    boss_diagonal_cooldown = 1500  # in ms
     level_start_time = 0
     top_scores = []
     high_score_updated = False
@@ -214,7 +214,7 @@
             "level1/redtshirt.png"
         ],
         2: [
-            "level2/broken guitar.png",  # Corrected filename (no space)
+            "level2/broken guitar.png",  # Correct filename with space
             "level2/brokenbtl.png",
             "level2/greentshirt.png",
             "level2/sticker.png",
@@ -348,9 +348,7 @@
 
     for lvl, imgs in level_images.items():
         for img in imgs:
-            # Replace spaces with underscores in filenames
-            fixed_src = img.src.replace(" ", "_")
-            img.src = fixed_src
+            # Ensure the image filename is correct (no renaming)
             img.bind("load", lambda e, lvl=lvl: asset_loaded(f"level{lvl}_img"))
             img.bind("error", lambda e, lvl=lvl, src=img.src: asset_loaded(f"level{lvl}_img_failed"))
 
@@ -360,8 +358,7 @@
         canvas.style.display = "block"
         set_music_for_title_screen()       # Start title music
         initialize_high_score()
-        # No need for separate animation; main loop handles drawing
-        # draw_start_screen will be called by the main loop
+        # The main loop will handle drawing the start screen
 
     # ------------------------------
     # GAME INITIALIZATION / RESET
@@ -388,9 +385,10 @@
                 print(f"Setting up enemies for Level {level} with {rows} rows and {cols} columns")
                 for r in range(rows):
                     for c in range(cols):
-                        img = current_level_images[
-                            int(window.Math.random() * len(current_level_images))
-                        ]
+                        img_index = int(window.Math.random() * len(current_level_images))
+                        if img_index >= len(current_level_images):
+                            img_index = len(current_level_images) - 1
+                        img = current_level_images[img_index]
                         enemy_x = c * (ENEMY_SIZE + 10) + 50
                         enemy_y = r * (ENEMY_SIZE + 10) + 50
                         enemies.append({
@@ -415,7 +413,6 @@
             showing_level_title = False
             ENEMY_SPEED = 1.5 + level
             game_over = False
-            game_started = True
             level_start_time = window.Date.new().getTime()
 
             # Set music for the new level
@@ -505,7 +502,7 @@
             ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
 
         print("Scheduling initialize_game() in 1 second")
-        window.setTimeout(lambda: initialize_game(), 1000)  # Proceed to initialize the game after 1 second
+        timer.set_timeout(initialize_game, 1000)  # Proceed to initialize the game after 1 second
 
         # Reset the flag to prevent re-drawing
         global showing_level_title
@@ -531,7 +528,7 @@
             show_high_score_prompt()
         else:
             print("No high score update: Scheduling game reset in 3 seconds")
-            window.setTimeout(reset_game, 3000)
+            timer.set_timeout(reset_game, 3000)
 
     def show_high_score_prompt():
         print("Displaying high score modal")
@@ -635,7 +632,7 @@
                 ctx.font = "48px 'Press Start 2P'"
                 ctx.textAlign = "center"
                 ctx.fillText("GAME OVER", WIDTH // 2, HEIGHT // 2)
-                window.setTimeout(show_final_score, 3000)
+                timer.set_timeout(show_final_score, 3000)
 
             # If boss is beaten
             if boss_hits >= BOSS_HITS_REQUIRED and not game_over:
@@ -647,7 +644,7 @@
                     ctx.font = "48px 'Press Start 2P'"
                     ctx.textAlign = "center"
                     ctx.fillText("YOU WIN!", WIDTH // 2, HEIGHT // 2)
-                    window.setTimeout(show_final_score, 3000)
+                    timer.set_timeout(show_final_score, 3000)
 
             # Level up if no enemies remain
             if len(enemies) == 0 and level <= MAX_LEVELS and not game_over:
@@ -673,7 +670,7 @@
     # --------------------------------
     def submit_name(event):
         global top_scores, score
-        player_name = player_name_input.value
+        player_name = player_name_input.value.strip()
         if player_name:
             top_scores.append({"name": player_name, "score": score})
             top_scores = sorted(top_scores, key=lambda x: x['score'], reverse=True)[:3]
@@ -766,7 +763,7 @@
         global game_over, score, game_started, showing_level_title
         global ENEMY_SPEED, boss_hits, boss_direction
 
-        if game_over or not game_started or showing_level_title:
+        if not game_started or showing_level_title or showing_final_score:
             draw()
             return
 
@@ -785,8 +782,9 @@
                 print(f"Enemy bullet removed for going off-screen: {bullet}")
 
         # Laser beams expire
+        current_time = window.Date.new().getTime()
         for laser in laser_beams[:]:
-            if window.Date.new().getTime() - laser["timestamp"] > LASER_DURATION:
+            if current_time - laser["timestamp"] > LASER_DURATION:
                 laser_beams.remove(laser)
                 print(f"Laser beam removed after duration: {laser}")
 
@@ -810,6 +808,7 @@
                         score += 1
                         explosion_audio.play()
                         break
+
         else:
             # Collisions with boss
             for bullet in bullets[:]:
@@ -865,6 +864,7 @@
                     print(f"Enemy moved down to {enemy['pos'][1]}")
                 ENEMY_SPEED = -ENEMY_SPEED
                 print("Enemies moved down and reversed direction")
+
         else:
             # Boss movement
             boss_pos[0] += boss_direction * 10
@@ -875,6 +875,11 @@
             boss_pos[1] += window.Math.random() * 10 - 5
             boss_pos[1] = max(0, min(HEIGHT // 4, boss_pos[1]))
             print(f"Boss vertical position updated to {boss_pos[1]}")
+
+        # Check for level completion
+        if len(enemies) == 0 and level <= MAX_LEVELS and not game_over:
+            print(f"No enemies left: Level {level} completed")
+            level_up()
 
         draw()
 
@@ -1019,16 +1024,16 @@
     # EVENT BIND
     # -----------
     window.bind("keydown", move_player)  # Changed from document.bind to window.bind
-    window.setInterval(update, 30)
-    window.setInterval(enemy_shoot, 500)
-    window.setInterval(toggle_flash_text, 1000)
+    window.set_interval(update, 30)       # Approximately 33 FPS
+    window.set_interval(enemy_shoot, 500)
+    window.set_interval(toggle_flash_text, 1000)
 
     # Simple loading screen
     def show_loading_screen():
         print("Showing loading screen")
         loading_bar_container.style.display = "flex"
         canvas.style.display = "none"
-        window.setTimeout(show_title_screen, 3000)
+        # Once assets are loaded, show_title_screen() is called
 
     # Start
     show_loading_screen()
